--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -33,13 +33,13 @@ body {
 	color: RGBA(89, 189, 230, 1);	
 }
 
+.tapor-logo {
+	cursor: pointer;
+}
+
 .tapor-blue hr {
-		/*display: block; 
-		height: 1px;*/
     border: 0; 
     border-top: 5px solid RGBA(89, 189, 230, 1);	
-    /*margin: 1em 0; 
-    padding: 0; */
     margin-top: 0px
 }
 
