--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,6 +1,6 @@
 <div class="row" id="tapor-header">
 	<div class="col-md-2">
-		<h1>TAPoR 3</h1>
+		<div class="tapor-logo" ng-click="go_to('/')"><h1>TAPoR 3</h1></div>
 	</div>
 	<div class="col-md-10 tapor-blue" id="tapor-tagline">
 		<h1>Discover research tools for studying texts.</h1>
