Changes for demo.

--- a/app/assets/templates/tapor/index.html
+++ b/app/assets/templates/tapor/index.html
@@ -35,7 +35,9 @@
 
 	      	</div>	
 	      	<div class="col-md-9">
-						<img ng-src="{{tool.image_url}}" style="margin:auto;" height="440" width="550">	      		
+	      		<a href="/tools/{{tool.id}}">
+							<img ng-src="{{tool.image_url}}" style="margin:auto;" height="440" width="550">	      
+						</a>		
 	      	</div>
 	      </div>
 
