--- a/app/assets/templates/tools/featured.html
+++ b/app/assets/templates/tools/featured.html
@@ -13,7 +13,7 @@
           </div>
         </div>
   			<div class="panel-body">
-  			<ul class="draggable_place list-tool-area" as-sortable="toolsListener" ng-model="tools_page.tools">
+  			<ul class="draggable_place list-tool-area list-unstyled" as-sortable="toolsListener" ng-model="tools_page.tools">
           <li class="column_sortable" ng-repeat="tool in tools_page.tools" as-sortable-item>
             <div as-sortable-item-handle>
             	
@@ -70,7 +70,7 @@
         	</div>
         </div>
   			<div class="panel-body">
-  			<ul class="draggable_place list-tool-area" as-sortable="toolsListener" ng-model="data.featured">
+  			<ul class="draggable_place list-tool-area list-unstyled" as-sortable="toolsListener" ng-model="data.featured">
           <li class="column_sortable" ng-repeat="tool in data.featured" as-sortable-item>
             <div as-sortable-item-handle>
             	
