--- a/app/assets/templates/tool_lists/edit.html
+++ b/app/assets/templates/tool_lists/edit.html
@@ -33,7 +33,7 @@
 
         </div>
   			<div class="panel-body">
-  			<ul class="draggable_place list-tool-area" as-sortable="toolsListener" ng-model="tools">
+  			<ul class="draggable_place list-tool-area list-unstyled" as-sortable="toolsListener" ng-model="tools">
           <li class="column_sortable" ng-repeat="tool in tools_page.tools track by $index" as-sortable-item>
             <div as-sortable-item-handle>
             	
@@ -107,7 +107,7 @@
           </form>
         </div>
   			<div class="panel-body list-tool-area">
-  			<ul class="draggable_place list-tool-area" as-sortable="listListener" ng-model="data.tool_list_items">
+  			<ul class="draggable_place list-tool-area list-unstyled" as-sortable="listListener" ng-model="data.tool_list_items">
           <li class="column_sortable" ng-repeat="list_item in data.tool_list_items" as-sortable-item>
             <div as-sortable-item-handle>
             
