--- a/app/assets/templates/users/view.html
+++ b/app/assets/templates/users/view.html
@@ -22,14 +22,14 @@
           <div class="row">
             <div class="col-md-12">
               <ul>
-                <li>
+                <li ng-if="current_user.position_affiliation != ''">
                   {{current_user.position_affiliation}}
                 </li>
                 <li ng-if="current_user.is_email_publishable">
                   Email: {{current_user.email}}
                 </li>
-                <li>
-                  Web site: {{current_user.site}}
+                <li ng-if="current_user.site != ''">
+                  Web site: {{current_user.current_user}}
                 </li>
               </ul>
             </div>
@@ -42,7 +42,8 @@
     <!-- right column -->
     <div class="col-md-9">
       <div ng-repeat="tool_list in tool_lists">
-        <div class="row">
+      <div compressed-list list="tool_list"></div>
+<!--         <div class="row">
           <div class="col-md-3">
             <div class="row">
               <div class="col-md-12">
@@ -66,7 +67,7 @@
             </ul>
             
           </div>
-        </div>
+        </div> -->
       </div>
 
     </div>
