--- a/app/assets/templates/tapor/index.html
+++ b/app/assets/templates/tapor/index.html
@@ -4,12 +4,7 @@
 		<div class="col-md-12" id="tapor-featured-carrousel">
 			<carousel interval="5000000" class="tapor-carousel">
 	      <slide ng-repeat="tool in featured" active="slide.active" class="tapor-slide">
-	   
-<!-- 	      	<div>
-						<div class="tapor-slide-image">
-							<img ng-src="{{tool.image_url}}" style="margin:auto;" height="440" width="550">	 
-						</div>
-					</div> -->
+	  
 
  	      <div class="row">
 	      	<div class="col-md-3">
@@ -148,7 +143,7 @@
 				<div class="col-md-12">
 					<div class="tapor-title">Comments</div>
 					<div ng-repeat="comment in latest_comments" class="tapor-comment">
-						<strong>{{comment.user.name}}	on {{comment.tool.name}}:</strong>
+						<strong><a href='/users/{{comment.user.id}}'>{{comment.user.name}}</a> on {{comment.tool.name}}:</strong>
 						<span class="break-content" ng-bind-html="comment.content"></span>
 					</div>
 
