--- a/app/assets/templates/tapor/index.html
+++ b/app/assets/templates/tapor/index.html
@@ -84,8 +84,8 @@
 				</div>
 
 			</div>
-			<!-- latest lists -->
-			<div class="row" ng-repeat="list in latest_lists">
+			<!-- featured lists -->
+			<div class="row" ng-repeat="list in featured_tool_lists">
 				<div compressed-list list='list'></div>				
 			</div>
 			<!-- latest tools -->
@@ -94,7 +94,7 @@
 
 						<div class="row">
 							<div class="col-md-12">
-								<h3>Latest tools</h3>
+								<h1 class="tapor-title">Latest tools</h1>
 							</div>
 						</div>
 						<div class="row">
@@ -115,9 +115,27 @@
 
 			<div class="row">
 				<!-- latest lists -->
+				
 				<div class="col-md-4">
-					
+					<h1 class="tapor-title">Latest Lists</h1>
+					<div class='row' ng-repeat='list in latest_lists'>
+						<div class="col-md-12">
+							<div clas="row">
+								<div class='col-md-12'>
+									<a href="/tool_lists/{{list.id}}">
+										{{list.name}} - {{list.tool_list_items.length}} tools
+									</a>
+								</div>
+							</div>
+							<div clas="row">
+								<div class='col-md-12'>
+									{{list.detail}}
+								</div>
+							</div>
+						</div>
+					</div>					
 				</div>
+
 				<!-- latest reviews -->
 				<div class="col-md-4">
 					
@@ -143,8 +161,8 @@
 				<div class="col-md-12">
 					<div class="tapor-title">Comments</div>
 					<div ng-repeat="comment in latest_comments" class="tapor-comment">
-						<strong><a href='/users/{{comment.user.id}}'>{{comment.user.name}}</a> on {{comment.tool.name}}:</strong>
-						<span class="break-content" ng-bind-html="comment.content"></span>
+						<strong><a href='/users/{{comment.user.id}}'>{{comment.user.name}}</a> on <a href="/tools/{{comment.tool.id}}"> {{comment.tool.name}}</a>:</strong>
+						<span class="break-content">{{comment.content | htmlToPlaintext | max100}} <a href="/tools/{{comment.tool.id}}#{{comment.id}}">[...]</a></span>
 					</div>
 
 				</div>
