Search history and back button now working.

--- a/app/assets/javascripts/angular/app.js.erb
+++ b/app/assets/javascripts/angular/app.js.erb
@@ -59,6 +59,7 @@ app.config(['$routeProvider', '$locationProvider',
       // Tools
       .when('/tools', {
         templateUrl: "<%= asset_path('tools/index.html') %>",
+        reloadOnSearch: false
       })
       .when('/tools/new', {
         templateUrl: "<%= asset_path('tools/edit.html') %>",
