--- a/app/assets/templates/tapor/index.html
+++ b/app/assets/templates/tapor/index.html
@@ -93,8 +93,11 @@
 				<div class="col-md-12">
 
 						<div class="row">
-							<div class="col-md-12">
+							<div class="col-md-10">
 								<h1 class="tapor-title">Latest tools</h1>
+							</div>
+							<div class="col-md-2">
+								<a href="/tools/?sort=desc&order=id">see all</a>
 							</div>
 						</div>
 						<div class="row">
@@ -103,7 +106,7 @@
 									<a href="/tools/{{tool.id}}"> <img src="{{tool.thumb_url}}" width="160px"></a>
 									<p><h6>{{tool.name}}</h6></p>
 								</div>								
-							</div>
+							</div>							
 						</div>
 
 				</div>				
