--- a/app/assets/templates/tools/index.html
+++ b/app/assets/templates/tools/index.html
@@ -8,7 +8,7 @@
 					<div class="input-group">
 						<input type="text" class="form-control" placeholder="Search for..." ng-model='query'>
 						<span class="input-group-btn">
-							<button class="btn btn-default" type="button" ng-click='update_query_filter()'>Go</button>
+							<button class="btn btn-default" type="button" ng-click='update_query_filter()'><span class='glyphicon glyphicon-search'></span></button>
 						</span>
 					</div>
 				</div>
