--- a/app/assets/templates/tools/edit.html
+++ b/app/assets/templates/tools/edit.html
@@ -282,7 +282,7 @@
   </div>
 
   <!-- modal -->
-  <div class="modal fade" id="deleteModal">
+  <div class="modal" id="deleteModal">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
