--- a/app/assets/templates/tools/index.html
+++ b/app/assets/templates/tools/index.html
@@ -6,7 +6,7 @@
 			<form class="form-inline">
 				<div class="form-group">				
 					<div class="input-group">
-						<input type="text" class="form-control" placeholder="Search for..." ng-model='query'>
+						<input type="text" class="form-control" placeholder="Search for..." ng-model='query' custom-enter="update_query_filter()">
 						<span class="input-group-btn">
 							<button class="btn btn-default" type="button" ng-click='update_query_filter()'><span class='glyphicon glyphicon-search'></span></button>
 						</span>
