--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -7,7 +7,7 @@
 	</div>
 	<div class="col-md-2 tapor-blue" id="tapor-search">
 		<div class="input-group">
-			<input type="text" class="form-control" placeholder="Search" ng-model="query">
+			<input type="text" class="form-control" placeholder="Search" ng-model="query" custom-enter="header_search()">
 			<span class="input-group-btn">
 				<button class="btn btn-default" type="button" ng-click="header_search()">
 					<span class='glyphicon glyphicon-search'></span>
