--- a/app/assets/templates/tapor/index.html
+++ b/app/assets/templates/tapor/index.html
@@ -2,6 +2,7 @@
 	<!-- featured -->
 	<div class="row" >
 		<div class="col-md-8" id="tapor-featured-carrousel">
+			
 			<carousel interval="5000000" class="tapor-carousel">
 	      <slide ng-repeat="tool in featured" active="slide.active" class="tapor-slide">
 	  
@@ -51,7 +52,13 @@
 	        	<h3>{{tool.name}}</h3>
 	        </div> -->
 	      </slide>
-    </carousel>
+   	 </carousel>
+		</div>
+		<div class="col-md-4">
+			
+				<tool-list class="tool-win" ng-model="tools_by_analysis.tools" category-list="tools_by_analysis.attribute_values" element-categories="attribute_value_ids"></tool-list>
+
+
 		</div>
 	</div>
 
