Made outer divs the same height

--- a/app/assets/templates/tool_lists/edit.html
+++ b/app/assets/templates/tool_lists/edit.html
@@ -1,6 +1,6 @@
 <div ng-controller='ListsEditController' class='tapor-container'>
-  <div class="row">
-  	<div class="col-sm-6">
+  <div class="row edit-tool-list-row">
+  	<div class="col-sm-6 edit-tool-list-column">
   		<div class="row">
   		<div class="panel panel-default">
   			<div class="panel-heading list-editing-column">
@@ -73,7 +73,7 @@
         </div>
   		</div>
   	</div>
-  	<div class="col-sm-6">
+  	<div class="col-sm-6 edit-tool-list-column">
   		<div class="row">
   			<div class="panel panel-default">
   				<div class="panel-heading list-editing-column">				
