Replaced placeholder text.

--- a/app/assets/templates/tapor/index.html
+++ b/app/assets/templates/tapor/index.html
@@ -75,7 +75,7 @@
 				<div class="col-md-8">
 					<h1 class="tapor-title">Curated Tool Lists</h1>
 					<p>
-					Lorem ipsum dolor sit amet, consec tetur adipiscing elit. Curabitur dictum augue non quam mollis tristique. Vestibulum scelerisque porttitor. Lorem ipsum dolor sit amet, consec tetur adipiscing elit. Curabitur dictum augue non quam mollis tristique. Vestib ulum scelerisque porttitor. Lorem ipsum dolor sit amet, consec tetur adipiscing elit. Curabitur dictum augue non quam mollis tristique.
+					Curated lists represent the commonly used or widely respected groups of tools used by leading scholars in the various fields of Digital Humanities. They represent both tried and trusted tools used by DH scholars, or new advancements that offer exciting new possibilities in their field. Curated lists are excellent places to start exploring TAPoR from, and can help with deciding what to include in your own lists.
 					</p>
 				</div>
 
@@ -86,10 +86,10 @@
 					</div>
 					<ul class="tapor-rightaligned-list">
 						<li>
-							Tool lists
+							Tool lists - Look at others’ tool lists, curated lists from leading scholars, and share your own list
 						</li>
 						<li>
-							Code as tools
+							Code as tools - Upload and access code directly from TAPoR. Use completed code others have uploaded, or take parts that suit your research.
 						</li>
 					</ul>
 				</div>
