tool sort by works. need to add logic to change button appearance

--- a/app/assets/templates/tools/index.html
+++ b/app/assets/templates/tools/index.html
@@ -18,9 +18,9 @@
 	<div class="row">
 		<div class="col-md-12">
 			<form class="form-inline">
-				<button class='btn btn-primary' ng-click='order("name")'>Name <span class='glyphicon glyphicon-arrow-down'></span></button>
-				<button class='btn btn-default' ng-click='order("rating")'>Rating</button>
-				<button class='btn btn-default' ng-click='order("date")'>Date</button>
+				<button class='btn' ng-click='orderTools("name")'>Name <span class='glyphicon glyphicon-arrow-down'></span></button>
+				<button class='btn' ng-click='orderTools("rating")'>Rating</button>
+				<button class='btn' ng-click='orderTools("date")'>Date</button>
 			</form>
 		</div>
 	</div>
