Made the child ul fill the parent

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -236,7 +236,12 @@ body, html {
 }
 
 .edit-tool-list-column > .row > .panel > .panel-body {
+	display: flex;
 	flex: 2;
+}
+
+.edit-tool-list-column > .row > .panel > .panel-body > .draggable_place {
+	flex: 1;
 }
 
 .search-field {
